MD Extensions: Display extension size in details view.

Bug: 794794
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I021ce4292149c6d86302d7b3285f062decff4fd1
Reviewed-on: https://chromium-review.googlesource.com/827590
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524559}
Former-commit-id: b07445b4b12bd014c053022a5e18b867bf50f3f8