chrome/browser/resources/md_extensions/detail_view.js
@@ -20,11 +20,28 @@ cr.define('extensions', function() {
        */
       data: Object,
 
+      /** @private */
+      size_: String,
+
       /** @type {!extensions.ItemDelegate} */
       delegate: Object,
 
       /** Whether the user has enabled the UI's developer mode. */
       inDevMode: Boolean,
+    },
+
+    observers: [
+      'onItemIdChanged_(data.id, delegate)',
+    ],
+
+    /** @private */
+    onItemIdChanged_: function() {
+      // Clear the size, since this view is reused, such that no obsolete size
+      // is displayed.:
+      this.size_ = '';
+      this.delegate.getExtensionSize(this.data.id).then(size => {
+        this.size_ = size;
+      });
     },
 
     /**
