chrome/browser/resources/md_extensions/item.js
@@ -63,6 +63,12 @@ cr.define('extensions', function() {
 
     /** @param {string} id */
     showInFolder(id) {}
+
+    /**
+     * @param {string} id
+     * @return {!Promise<string>}
+     */
+    getExtensionSize(id) {}
   }
 
   const Item = Polymer({
